--- a/styles/legal.css
+++ b/styles/legal.css
@@ -1,82 +1,83 @@
 body {
-    margin: 0;
-    background: #F6F7F8;
+  margin: 0;
+  background: #f6f7f8;
 }
 
 .legal-notice-section {
-    margin: 110px 98px 0px 328px;
-    display: flex;
-    flex-direction: column;
+  margin: 110px 98px 0px 328px;
+  display: flex;
+  flex-direction: column;
 }
 
 .top-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 ul {
-    padding-inline-start: 20px;
+  padding-inline-start: 20px;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 h2,
 h3 {
-    font-weight: 700 !important;
+  font-weight: 700 !important;
 }
 
 .developer-link {
-    text-decoration: none;
-    color: #FD5B4F;
+  text-decoration: none;
+  color: #fd5b4f;
 }
 
 .join-link {
-    text-decoration: none;
-    color: #29ABE2;
+  text-decoration: none;
+  color: #29abe2;
 }
 
 .back-svg {
-    margin-right: 0.5px;
+  margin-right: 0.5px;
+  cursor: pointer;
 }
 
 main {
-    margin-top: 32px;
+  margin-top: 32px;
 }
 
 @media (max-width: 850px) {
-    .legal-notice-section {
-        margin: 110px 60px 0px 290px;
-    }
-    .back-svg {
-        margin-top: -50px;
-    }
+  .legal-notice-section {
+    margin: 110px 60px 0px 290px;
+  }
+  .back-svg {
+    margin-top: -50px;
+  }
 }
 
 @media (max-width: 760px) {
-    .legal-notice-section {
-        margin: 48px 16px 120px 16px;
-    }
-    h1 {
-        font-size: 47px !important;
-    }
-    h2 {
-        font-size: 27px;
-    }
-    p {
-        word-wrap: break-word;
-        overflow-wrap: break-word;
-        white-space: normal;
-    }
+  .legal-notice-section {
+    margin: 48px 16px 120px 16px;
+  }
+  h1 {
+    font-size: 47px !important;
+  }
+  h2 {
+    font-size: 27px;
+  }
+  p {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+  }
 }
 
 @media (max-width: 370px) {
-    h1 {
-        font-size: 36px !important;
-    }
-    h2 {
-        font-size: 20px;
-    }
+  h1 {
+    font-size: 36px !important;
+  }
+  h2 {
+    font-size: 20px;
+  }
 }
