--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -46,6 +46,19 @@ header {
   padding: 10px;
 }
 
+.resp-logo img:hover {
+  transform: scale(1.1);
+  transition: transform 125ms ease-in-out;
+}
+
+.logoDiv img {
+  transition: 125ms ease-out;
+}
+.logoDiv img:hover {
+  transform: scale(1.1);
+  transition: transform 125ms ease-in-out;
+}
+
 .gap26px {
   margin-left: 26px;
 }
@@ -89,7 +102,7 @@ header {
   font-weight: 700;
 }
 
-.navChild>a {
+.navChild > a {
   display: flex;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -97,12 +110,12 @@ header {
   margin-bottom: 8px;
 }
 
-.navChild>a:hover {
+.navChild > a:hover {
   background-color: rgba(9, 25, 49, 255);
   cursor: pointer;
 }
 
-.navChild>a img {
+.navChild > a img {
   padding-right: 8px;
 }
 
@@ -279,7 +292,7 @@ header {
     gap: 4px;
     flex-shrink: 0;
   }
-  .navChild>a:hover {
+  .navChild > a:hover {
     background-color: rgba(9, 25, 49, 255);
     cursor: pointer;
   }
@@ -336,7 +349,6 @@ header {
   .navBar-bottom {
     display: none;
   }
-
 }
 
 @media (min-width: 761px) {
@@ -373,11 +385,11 @@ header {
     flex-shrink: 0;
   }
 
-  .navChild>a img {
+  .navChild > a img {
     padding-right: 0;
   }
 
-  .navChild>a {
+  .navChild > a {
     padding: 0;
     margin: 0;
   }
