--- a/styles/board.css
+++ b/styles/board.css
@@ -24,10 +24,21 @@ body {
   padding-right: 50px;
 }
 
+.searchTaskContainer:focus-within {
+  border: 1px solid #29abe2 !important;
+}
+
 .addTaskBoardBtn {
   background-color: rgba(42, 54, 71, 255);
   border-radius: 8px;
   color: white;
+  transition: 75ms ease-in-out;
+}
+
+.addTaskBoardBtn:hover {
+  background-color: #29abe2;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  transition: 75ms ease-in-out;
 }
 
 .mobileAddTask {
@@ -116,6 +127,15 @@ body {
   border-radius: 10px;
   color: #a8a8a8;
   background-color: #e7e7e7;
+}
+
+.plusButton * {
+  transition: 75ms ease-in-out;
+}
+
+.plusButton:hover * {
+  stroke: #29abe2;
+  transition: 75ms ease-in-out;
 }
 
 .popUpBoardTask {
