--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,8 @@ h1 {
 
 .signup-btn:hover {
   transform: scale(1.02);
+  background: #29abe2;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   transition: transform 75ms ease-in-out;
 }
 
@@ -200,6 +202,13 @@ form {
   font-weight: 700;
   color: #2a3647;
 }
+
+.guest-login-btn:hover {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 2px solid #29abe2;
+  background-color: transparent;
+  color: #29abe2;
+}
 .checkbox-container {
   margin: 10px 10px;
 }
@@ -242,7 +251,8 @@ form {
 }
 
 .footer-container a:hover {
-  color: #2a3647;
+  color: #29abe2;
+  font-weight: 700;
 }
 
 @keyframes logoSlideIn {
