--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -294,7 +294,9 @@ body {
 }
 
 .clear-btn:hover {
-  border-color: #29abe2;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  border: 2px solid #29abe2;
+  background-color: transparent;
   color: #29abe2;
 }
 
@@ -324,11 +326,13 @@ body {
   border-radius: 10px;
   background: #2a3647;
   color: white;
+  border: unset;
 }
 
 .create-btn:hover {
-  background-color: #29abe2;
-  border: #29abe2;
+  background: #29abe2;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  transition: transform 75ms ease-in-out;
 }
 
 .form-btn {
