--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -670,8 +670,8 @@ li {
   height: 21px;
 }
 
-#hidden-error p {
-  color: red;
+#hidden-error {
+  color: red !important;
   padding-left: 15px;
 }
 
