--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -18,6 +18,9 @@ nav a {
   color: white;
 }
 
+.navChild > * {
+  user-select: none;
+}
 .sidebar {
   display: flex;
 }
@@ -196,6 +199,7 @@ header {
   justify-content: center;
   cursor: pointer;
   text-decoration: none;
+  user-select: none;
   color: #cdcdcd;
   font-family: Inter;
   font-size: 16px;
