--- a/styles/animations.css
+++ b/styles/animations.css
@@ -20,6 +20,31 @@
   }
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#loading-spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#loading-spinner > div {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
 .cardMove {
   transform: rotate(5deg);
 }
@@ -52,8 +77,7 @@
   z-index: 999;
 }
 
-
-@media(max-width: 949px) {
+@media (max-width: 949px) {
   .modal-backdrop {
     display: none !important;
   }
