--- a/styles/board.css
+++ b/styles/board.css
@@ -265,6 +265,18 @@ body {
   font-family: Inter;
 }
 
+@media screen and (max-width: 1290px) {
+  #awaitingFeedbackText {
+    margin-top: -30px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #inProgressText {
+    margin-top: -30px;
+  }
+}
+
 @media screen and (max-width: 1630px) {
   .popUpBoardTask {
     max-width: 90%;
@@ -334,6 +346,14 @@ body {
   }
   #popUpBoard {
     left: 15%;
+  }
+
+  #awaitingFeedbackText {
+    margin-top: 0;
+  }
+
+  #inProgressText {
+    margin-top: 0;
   }
 
   .gridContainerChildBoard .dropArea {
